[package]
name = "sebatustra-christmas"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.6.20", features = ["multipart", "ws"]}
axum-extra = {features = ["typed-header"]}
base64 = "0.21.5"
chrono = "0.4.31"
digest = "0.10.7"
dotenv = "0.15.0"
html-escape = "0.2.13"
image = "0.24.7"
regex = "1.10.2"
reqwest = "0.11.23"
serde = "1.0.193"
serde_json = "1.0.108"
sha2 = "0.10.8"
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.0"
shuttle-shared-db = {version = "0.35.2", features = ["postgres"]}
sqlx = {version = "0.7.3", features = ["postgres", "runtime-tokio-native-tls", "macros"]}
tokio = "1.28.2"
tracing = "0.1.40"
ulid = "1.1.0"
uuid = "1.6.1"
